edited some elements

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
                         <div class="img-holder">
                             <img src="./imgs/images/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="stickers-image">
-                            <p>You are at the right place</p>
+                            <p>Welcome to my portfolio!</p>
 
-                            <div>
-                                <img src="./imgs/icons/icons8-person-64.png" alt="" class="about-img">
+                            <div class="abt-img">
+                                <a href=""><img src="./imgs/icons/icons8-person-64.png" alt="" class="about-img"></a>
                             </div>
                             
                         </div>
