Added slides for the carousel

--- a/index.html
+++ b/index.html
@@ -62,7 +62,31 @@
                 <!-- Carousel display -->
 
                 <div class="carousel-container">
-                    <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
+
+                    <div class="slide-1">
+                        <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aperiam eaque, 
+                            asperiores officia eum cum delectus quae quos ratione impedit expedita maxime 
+                            sed numquam libero esse eveniet sit? Ex, consequatur.
+                        </p>
+                    </div>
+
+                    <div class="slide-1">
+                        <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aperiam eaque, 
+                            asperiores officia eum cum delectus quae quos ratione impedit expedita maxime 
+                            sed numquam libero esse eveniet sit? Ex, consequatur.
+                        </p>
+                    </div>
+
+                    <div class="slide-1">
+                        <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aperiam eaque, 
+                            asperiores officia eum cum delectus quae quos ratione impedit expedita maxime 
+                            sed numquam libero esse eveniet sit? Ex, consequatur.
+                        </p>
+                    </div>
+                    
                 </div>
 
             </div>
