--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Kazoga-garage</title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
     </head>
@@ -61,9 +60,9 @@
 
                 <!-- Carousel display -->
 
-                <div class="carousel-container">
+                <div class="card-container">
 
-                    <div class="slide-1">
+                    <div class="card-front">
                         <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aperiam eaque, 
                             asperiores officia eum cum delectus quae quos ratione impedit expedita maxime 
@@ -71,15 +70,7 @@
                         </p>
                     </div>
 
-                    <div class="slide-1">
-                        <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aperiam eaque, 
-                            asperiores officia eum cum delectus quae quos ratione impedit expedita maxime 
-                            sed numquam libero esse eveniet sit? Ex, consequatur.
-                        </p>
-                    </div>
-
-                    <div class="slide-1">
+                    <div class="card-back">
                         <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aperiam eaque, 
                             asperiores officia eum cum delectus quae quos ratione impedit expedita maxime 
