Updated HTML file

--- a/index.html
+++ b/index.html
@@ -61,22 +61,15 @@
                 <!-- Carousel display -->
 
                 <div class="card-container">
-
-                    <div class="card-front">
-                        <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aperiam eaque, 
-                            asperiores officia eum cum delectus quae quos ratione impedit expedita maxime 
-                            sed numquam libero esse eveniet sit? Ex, consequatur.
-                        </p>
+                    <div class="card-holder">
+                        <div class="card-front">
+                            <img src="./imgs/images/Group 7.png" alt="">
+                            <p>
+                                Get to explore the beauty of web design and how dynamic they are...
+                            </p>
+                        </div>
                     </div>
-
-                    <div class="card-back">
-                        <img src="./imgs/images/conor-luddy-IGa3Md8wP6g-unsplash.jpg" alt="">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aperiam eaque, 
-                            asperiores officia eum cum delectus quae quos ratione impedit expedita maxime 
-                            sed numquam libero esse eveniet sit? Ex, consequatur.
-                        </p>
-                    </div>
+                    
                     
                 </div>
 
