Created Dropdown menu for divices with width below 800px

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
             </nav>
 
+            <!-- Drop-down menu -->
+
+            <div class="dropdown-menu">
+                <div class="dropdown-items">
+                    <a class="bottom-line" href="#top-container">Home</a>
+                    <a class="bottom-line" href="#content-two-div">About me</a>
+                    <a href="#content-three-div">Projects</a>
+                </div>
+            </div>
+
             <!-- End of navigation bar-->
 
             <!-- Main section -->
