Added Readme file,License and updated HTML and CSS file

--- a/index.html
+++ b/index.html
@@ -394,6 +394,8 @@
 
         <hr class="content-hr">
 
+        <!-- Footer -->
+
 
         <footer class="page-footer" id="footer-contact-section">
             <div>
